--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -10,14 +10,13 @@
     padding: 1rem;
     background-color: transparent;
     border: .3rem solid var(--white);
-    color: white;
+    color: var(--white);
     font-size: 1.8rem;
     font-weight: 400;
     border-radius: 1rem;
 }
-
-.form input::placeholder {
-    color: white;
+.field ::placeholder {
+    color: var(--white);
 }
 
 .submit {
