--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 :root {
-    --white: #FFF;
-    --primary: #f59e0b;
-}
-
-html {
+    --white : #FFF;
+    --primary: #F59E0B;
+  }
+  html {
     font-size: 62.5%;
-}
-
-body {
+  }
+  body {
     font-family: 'Outfit', sans-serif;
-    background-image: url('bg_clima.jpg');
-    height: 100vh;
+    background-image: url('/bg_clima.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-}
+    height: 100vh;
+    color: var(--white);
+    font-size: 2rem;
+  }
